fixes for new v0.2 API
